tests/snapshots/run_wpt_conformance__coreml_gemm_two_float16_2D_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm two float16 2D tensors default options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[3, 4];
  }

  consts {
    operand_1: f16[4, 5] @bytes([4, 55, 113, 58, 23, 46, 155, 51, 203, 58, 88, 58, 78, 53, 81, 57, 126, 55, 117, 56, 180, 56, 228, 56, 109, 55, 241, 57, 246, 54, 119, 57, 245, 52, 186, 56, 164, 45, 245, 44]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=1.0, bTranspose=false, beta=1.0, c=null, label="");
  }

  outputs { gemmOutput; }
}
