tests/snapshots/run_wpt_conformance__coreml_gemm_two_float16_2D_tensors_options_aTranspose_being_explicit_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm two float16 2D tensors options.aTranspose being explicit false, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[3, 4];
  }

  consts {
    operand_1: f16[4, 5] @bytes([52, 57, 135, 46, 230, 55, 40, 53, 247, 58, 237, 57, 154, 57, 182, 57, 156, 58, 206, 54, 145, 56, 85, 56, 33, 53, 187, 56, 71, 50, 122, 53, 107, 40, 92, 57, 179, 53, 187, 53]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=1.0, bTranspose=false, beta=1.0, c=null, label="");
  }

  outputs { gemmOutput; }
}
