tests/snapshots/run_wpt_conformance__coreml_gemm_two_float16_2D_tensors_options_beta.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm two float16 2D tensors options.beta, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[3, 4];
  }

  consts {
    operand_1: f16[4, 5] @bytes([84, 53, 210, 57, 90, 51, 212, 47, 162, 49, 185, 58, 72, 54, 209, 58, 232, 42, 29, 52, 136, 48, 93, 52, 214, 57, 115, 56, 187, 57, 124, 56, 98, 57, 22, 56, 210, 53, 104, 59]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=1.0, bTranspose=false, beta=62.01828598608989, c=null, label="");
  }

  outputs { gemmOutput; }
}
