tests/snapshots/run_wpt_conformance__coreml_gemm_two_float16_2D_tensors_options_c.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm two float16 2D tensors options.c, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[3, 4];
  }

  consts {
    operand_1: f16[4, 5] @bytes([161, 49, 2, 59, 172, 53, 240, 50, 186, 58, 163, 37, 30, 58, 6, 59, 168, 51, 42, 54, 2, 46, 163, 56, 108, 55, 150, 57, 82, 58, 43, 58, 244, 57, 22, 52, 213, 59, 32, 59]);
    operand_2: f16[3, 5] @bytes([148, 59, 241, 56, 190, 57, 158, 49, 129, 55, 15, 54, 44, 57, 198, 55, 240, 59, 239, 41, 106, 50, 147, 57, 251, 42, 220, 57, 199, 59]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=1.0, bTranspose=false, beta=1.0, c=2, label="");
  }

  outputs { gemmOutput; }
}
